# FalseKing

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BSDMakefile  Cargo.toml  DESIGN.md  Game-legacy.sln  Game-legacy.vcxproj  Game-legacy.vcxproj.filters  Game-unix.mak  Game.sln  Game.tar.xz  Game.vcxproj  Game.vcxproj.filters  LICENSE.txt  Package.appxmanifest  README.md  appx.bat  assets_000.vpk  assets_dir.vpk  backend.h  build.rs  build.sh  clean.sh  copyfiles.bat  copyfiles.sh  core.lua  fs.cpp  fs.h  game.h  game.lua  image.cpp  image.h  input.h  libs-gaming_desktop-x86_64.txt  main.cpp  mathutil.h  packtool.cpp  packtool.vcxproj  (+10 more)
UwpAssets/: Resources.rc
assets/: font.qoi  font.toml  logo.qoi  sprites.qoi
common/: Cargo.toml
core/: Core.rc  backend.h  camera.cpp  camera.h  commit.cpp  components.cpp  components.h  core.h  discord.cpp  discord.h  fs.cpp  fs.h  globals.cpp  image.cpp  image.h  input.h  level.cpp  level.h  main.cpp  physics.cpp  physics.h  resource.h  sprite.cpp  sprite.h  systems.cpp  systems.h  vpk.cpp  vpk.h  vpk2.cpp
depscripts/: README.md  assets-generic.txt  build-generic.txt  distrib-files-gaming_desktop-x86_64.txt  distrib-files-generic.txt  distrib-generic.txt  libs-generic.txt  licenses-generic.txt  tools-generic.txt
distrib/: MicrosoftGame.config  assets_000.vpk  assets_dir.vpk
game/: Game.rc  components.cpp  components.h  game.h  player.cpp  player.h  sprites.cpp  sprites.h  systems.cpp  systems.h
gdk/: FalseKing.rc  MicrosoftGame.Config  MicrosoftGameConfig.mgc  resource.h
include/: backend.h  camera.h  discord.h  (+15 more)
(+75 files in other folders)
