[package]
name = "false_king"
version = "0.1.0"
edition = "2021"

[features]
default = []
release_log = []

[dependencies]
chrono = "0.4.31"
fern = { version = "0.6.2", features = ["colored"] }
legion = "0.4.0"
log = "0.4.20"

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_System", "Win32_System_LibraryLoader"] }
windows-core = "0.51.1"

[target.'cfg(target_family = "unix")'.dependencies]
xcb = "1.2.2"
