[package]
name = "false_king"
version = "0.1.0"
edition = "2021"

[features]
default = []
release_log = []
xbox = []

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
legion = "0.4.0"
log = "0.4.20"
pci-ids = "0.2.5"

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_System", "Win32_System_LibraryLoader"] }
windows-core = "0.51.1"
windows_i686_msvc = "0.48.5"

[target.'cfg(target_family = "apple")'.dependencies]
metal = "0.26.0"

[target.'cfg(not(target_family = "apple"))'.dependencies]
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"

[target.'cfg(target_family = "unix")'.dependencies]
xcb = "1.2.2"
